--- a/random-jokes/assets/css/style.css
+++ b/random-jokes/assets/css/style.css
@@ -83,32 +83,48 @@
 
 .cf { *zoom: 1; }
 
-/* 1.3. Font class declaration
-========================================================================== */
-/*
- * Mention the font property (eg: font-family, font-size, font-weight, font-style
- * etc) that have been commonly used in the html document. Make a class of it and
- * apply to the element wherever it is needed. If any single property in changed,
- * then override only that property in the particular class which is used for the
- * element.
- * (NOTE: Remove this commented code once you start 
- * developing the code. Remove the following font class and add your own
- * as this is just and example to let you know. If there is only one font family
- * followed throughout the site, then menstion the font property in body. No need
- * of creating an extra class for it) */
+ /* ======= Your styling goes below ======= */
 
- .futura-bold-font {
-  font-family: 'Futura Bold', 'Gill Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: bold;
+ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
+ blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
+ ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
+ dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
+ tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
+ figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
+ time, mark, audio, video { 
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
 
- /* ======= Your styling goes below ======= */
-.mainlist{
-  width: 90%;
-  margin: 0 auto;
+ img {
+   width: 100%;
+   display: block;
+ }
+
+ body {
+  background-color: #4c2112;
 }
 
+h1 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.4;
+  text-align: center;
+}
+
+figure.random-jokes-icon img { 
+  max-width: 300px; 
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.container {
+  width: 80%;
+  max-width: 1000px;
+  padding: 50px 5%;
+  margin: 50px auto;
+  background-color: #fffef0;
+}
 
 .mainlist li {
   padding: 10px 0;
@@ -121,17 +137,20 @@
   margin-bottom: 30px;
 }
 
+.mainlist .joketitles,
+.mainlist .jokedata {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
 .j_id, 
 .j_category,
 .j_joke {
   display: inline-block;
   vertical-align: top;
-  font-family: sans-serif;
   font-size: 16px;
   line-height: 1.4;
 }
-
-
 
 .j_id {
   width: 5%;
@@ -154,8 +173,7 @@
 .t_joke {
   display: inline-block;
   vertical-align: top;
-  color: #227b99;
-  font-family: sans-serif;
+  color: #b3360a;
   font-size: 17px;
   font-weight: 700;
   line-height: 1.4;
@@ -193,6 +211,7 @@
 
 .loadmorebutton {
   padding: 10px 20px;
+  border: none;
   border-radius: 25px;
   outline: none;
   margin-bottom: 30px;
@@ -200,21 +219,20 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #999;
-  color: #111;
-  font-family: sans-serif;
+  background-color: #482c22;
+  color: #fff;
   font-size: 14px;
   font-weight: 700;
-  transition: all .6s linear;
+  -webkit-transition: all .3s linear;
+  -o-transition: all .3s linear;
+  transition: all .3s linear;
 }
 
 .loadmorebutton:hover {
-  background-color: #000;
-  color: #fff;
+  background-color: #795548;
 }
 
 .show { display: block; }
-
 
 .bottomload {  
   position: fixed;
@@ -248,5 +266,12 @@
     padding: 0 5%;
     text-align: center;
   }
-  
+}
+
+@media screen and (max-width: 540px){
+  h1 { font-size: 28px; }
+
+  figure.random-jokes-icon img {
+    width: 70%;
+  }
 }
