--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -5,6 +5,8 @@ body { background-color: #40e0d0; }
   margin: 0 auto;
 }
 
+li {list-style-type: none; }
+
 h2 {
   padding: 20px 0;
   color: #3d4c9e;
@@ -39,8 +41,10 @@ h2 {
 .inputdetails button[type="submit"]:hover { background-color: #007777; }
 
 .weatherdetails {
+  width: 600px;
   box-sizing: border-box;
   padding: 20px;
+  margin-bottom: 50px;
   display: inline-block;
   position: relative;
   left: 50%;
@@ -49,11 +53,13 @@ h2 {
 }
 
 .weather-pts {
-  display: inline-block;
-  vertical-align: middle;
+  display: block;
+  /* display: inline-block;
+  vertical-align: middle; */
 }
 
 .wptsimg img {
+  /* width: 100%; */
   width: 80px;
   height: 80px;
 }
@@ -62,6 +68,29 @@ h2 {
 .weather-forecast h2 { text-align: center; }
 
 .weather-forecast span { text-align: center; }
+
+.forecast-ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+
+.forecast-ul li .forecast-date {
+  flex-basis: 30%;  
+}
+
+.forecast-ul li .forecast-icon {
+  flex-basis: 20%;  
+}
+
+.forecast-ul li .forecast-temp {
+  flex-basis: 50%;  
+}
+
+.forecast-temp span {
+  display: inline;
+}
 
 @media screen and (max-width: 995px) {
   .inputdetails button[type="submit"]:hover {
@@ -73,7 +102,7 @@ h2 {
   .inputdetails { padding-top: 20px; }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 600px) {
   .weatherdetails { 
     width: 90%; 
     margin-bottom: 100px;
@@ -90,7 +119,11 @@ h2 {
   
   h2 { font-size: 24px; }
 
-  .weather-forecast div { margin-bottom: 50px; }
+  .forecast-ul li { 
+    margin-bottom: 50px;
+    display: block; 
+    text-align: center;
+  }
 
-  .weather-forecast span { display: block; }
+  /* .weather-forecast span { display: block; } */
 }
