--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -41,7 +41,7 @@ h2 {
 .inputdetails button[type="submit"]:hover { background-color: #007777; }
 
 .weatherdetails {
-  width: 600px;
+  width: 540px;
   box-sizing: border-box;
   padding: 20px;
   margin-bottom: 50px;
@@ -52,14 +52,9 @@ h2 {
   background-color: rgba(255,255,255,0.5);
 }
 
-.weather-pts {
-  display: block;
-  /* display: inline-block;
-  vertical-align: middle; */
-}
+.weather-pts { display: block; }
 
 .wptsimg img {
-  /* width: 100%; */
   width: 80px;
   height: 80px;
 }
@@ -69,23 +64,26 @@ h2 {
 
 .weather-forecast span { text-align: center; }
 
+.forecast-ul { padding-left: 0; }
+
 .forecast-ul li {
   display: flex;
   justify-content: center;
   align-items: center;
   align-self: center;
+  text-align: center;
 }
 
 .forecast-ul li .forecast-date {
-  flex-basis: 30%;  
+  flex-basis: 35%;  
 }
 
 .forecast-ul li .forecast-icon {
-  flex-basis: 20%;  
+  flex-basis: 25%;  
 }
 
 .forecast-ul li .forecast-temp {
-  flex-basis: 50%;  
+  flex-basis: 40%;
 }
 
 .forecast-temp span {
@@ -102,7 +100,7 @@ h2 {
   .inputdetails { padding-top: 20px; }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 540px) {
   .weatherdetails { 
     width: 90%; 
     margin-bottom: 100px;
@@ -122,8 +120,5 @@ h2 {
   .forecast-ul li { 
     margin-bottom: 50px;
     display: block; 
-    text-align: center;
   }
-
-  /* .weather-forecast span { display: block; } */
 }
