--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -30,7 +30,7 @@ h2 {
   padding: 5px 10px;
   border: none;
   outline:none;
-  background-color: #005d5d;
+  background-color: #3d4c9e;
   color: #fff;
   font-weight: 700;
   -webkit-transition: 0.3 linear all;
@@ -38,7 +38,7 @@ h2 {
   transition: 0.3 linear all;
 }
 
-.inputdetails button[type="submit"]:hover { background-color: #007777; }
+.inputdetails button[type="submit"]:hover { background-color: #5d6fd4; }
 
 .weatherdetails {
   width: 540px;
@@ -56,7 +56,7 @@ h2 {
 
 .wptsimg img {
   width: 80px;
-  height: 80px;
+  height: auto;
 }
 
 .weather-info { margin-bottom: 50px; }
@@ -67,6 +67,7 @@ h2 {
 .forecast-ul { padding-left: 0; }
 
 .forecast-ul li {
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,7 +93,7 @@ h2 {
 
 @media screen and (max-width: 995px) {
   .inputdetails button[type="submit"]:hover {
-    background-color: #005d5d;
+    background-color: #3d4c9e;
   }
 }
 
