--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -79,24 +79,35 @@ h2 {
 
 .forecast-ul li {
   margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
   align-self: center;
   text-align: center;
 }
 
 .forecast-ul li .forecast-date {
+  -ms-flex-preferred-size: 35%;
   flex-basis: 35%;
 }
 
 .forecast-ul li .forecast-date span { line-height: 1.8; }
 
 .forecast-ul li .forecast-icon {
-  flex-basis: 25%;  
+  -ms-flex-preferred-size: 25%;
+  flex-basis: 25%;
 }
 
 .forecast-ul li .forecast-temp {
+  -ms-flex-preferred-size: 40%;
   flex-basis: 40%;
 }
 
