--- a/rotating-navigation/style.css
+++ b/rotating-navigation/style.css
@@ -6,25 +6,23 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    margin: 0;
     background-color: #333;
     color: #222;
+    font-family: 'Lato', sans-serif;
     overflow-x: hidden;
-    margin: 0;
 }
 
 .container {
-    background-color: #fafafa;
-    transform-origin: top left;
-    transition: transform 0.5s linear;
     width: 100vw;
     min-height: 100vh;
     padding: 50px;
+    background-color: #fafafa;
+    transform-origin: top left;
+    transition: transform 0.5s linear;
 }
 
-.container.show-nav {
-    transform: rotate(-20deg);
-}
+.container.show-nav { transform: rotate(-20deg); }
 
 .circle-container {
     position: fixed;
@@ -33,32 +31,29 @@ body {
 }
 
 .circle {
-    background-color: #ff7979;
-    height: 200px;
     width: 200px;
+    height: 200px;
     border-radius: 50%;
     position: relative;
+    background-color: #ff7979;
     transition: transform 0.5s linear;
 }
 
+.container.show-nav .circle { transform: rotate(-70deg); }
+
 .circle button {
+    height: 100px;
+    border: 0;
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 100px;
     background: transparent;
-    border: 0;
-    font-size: 26px;
     color: #fff;
+    font-size: 26px;
 }
 
-.circle button:focus {
-    outline:none;
-}
-
-.circle button#open {
-    left: 60%;
-}
+.circle button:focus { outline:none; }
+.circle button#open { left: 60%; }
 
 .circle button#close {
     top: 60%;
@@ -66,6 +61,69 @@ body {
     transform-origin: top left;
 }
 
-.content img {
-    max-width: 100%;
+.container.show-nav + nav li {
+    transform: translateX(0);
+    transition-delay: 0.3s;
+}
+
+nav {
+    position: fixed;
+    bottom: 40px;
+    left: 0;
+    z-index: 100;
+}
+
+nav ul {
+    padding-left: 30px;
+    list-style-type: none;
+}
+
+nav ul li {
+    margin: 40px 0;
+    color: #fff;
+    text-transform: uppercase;
+    transform: translateX(-100%);
+    transition: transform 0.4s ease-in;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    transition: all 0.2s linear;
+}
+
+nav ul li a:hover { color: #ff7979; }
+
+nav ul li i {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+nav ul li + li {
+    margin-left: 15px;
+    transform: translateX(-150%);
+}
+
+nav ul li + li + li {
+    margin-left: 30px;
+    transform: translateX(-200%);
+}
+
+.content img { max-width: 100%; }
+
+.content {
+    margin: 50px auto;
+    max-width: 1000px;
+}
+
+.content h1 { margin: 0; }
+
+.content small {
+    color: #555;
+    font-style: italic;
+}
+
+.content p {
+    color: #333;
+    line-height: 1.5;
 }
