--- a/movie-app/style.css
+++ b/movie-app/style.css
@@ -6,14 +6,12 @@
     --secondary-color: #373b69;
 }
 
-* {
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
-    font-family: 'Poppins', sans-serif;
     margin: 0;
     background-color: var(--primary-color);
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -24,18 +22,16 @@ header {
 }
 
 .search {
-    background-color: transparent;
+    padding: 0.5rem 1rem;
     border: 2px solid var(--primary-color);
     border-radius: 50px;
+    background-color: transparent;
+    color: #fff;
     font-family: inherit;
     font-size: 1rem;
-    padding: 0.5rem 1rem;
-    color: #fff;
 }
 
-.search::placeholder {
-    color: #7378c5;
-}
+.search::placeholder { color: #7378c5; }
 
 .search:focus {
     outline: none;
@@ -49,64 +45,48 @@ main {
 
 .movie {
     width: 300px;
+    border-radius: 3px;
     margin: 1rem;
-    background-color: var(--secondary-color);
-    box-shadow: 0 4px 5px rgba(0,0,0,0.2);
     position: relative;
     overflow: hidden;
-    border-radius: 3px;
+    background-color: var(--secondary-color);
+    box-shadow: 0 4px 5px rgba(0,0,0,0.2);
 }
 
-.movie img {
-    width: 100%;
-}
+.movie img { width: 100%; }
 
 .movie-info {
-    color: #eee;
+    padding: 0.5rem 1 rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 1 rem 1rem;
+    color: #eee;
     letter-spacing: 0.5px;
 }
 
-.movie-info h3 {
-    margin-top: 0;
-}
+.movie-info h3 { margin-top: 0; }
 
 .movie-info span {
-    background-color: var(--primary-color);
     padding: 0.25rem 0 0.5rem;
     border-radius: 3px;
+    background-color: var(--primary-color);
     font-weight: bold;
 }
 
-.movie-info span.green {
-    color: lightgreen;
-}
-
-.movie-info span.orange {
-    color: orange;
-}
-
-.movie-info span.red {
-    color: red;
-}
+.movie-info span.green { color: lightgreen; }
+.movie-info span.orange { color: orange; }
+.movie-info span.red { color: red; }
 
 .overview {
-    background-color: #fff;
+    max-height: 100%;
     padding: 2rem;
     position: absolute;
     left: 0;
     bottom: 0;
     right: 0;
-    max-height: 100%;
+    background-color: #fff;
     transform: translateY(101%);
     transition: transform 0.3s ease-in;
 }
 
-.movie:hover .overview {
-    transform: translateY(0);
-}
-
-
+.movie:hover .overview { transform: translateY(0); }
