--- a/movie-app/style.css
+++ b/movie-app/style.css
@@ -1,5 +1,6 @@
 /*Importing Google Font*/
 @import url('https://fonts.googleapis.com/css?family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rowdies:wght@400;700&display=swap');
 
 :root {
     --primary-color: #22254b;
@@ -7,6 +8,15 @@
 }
 
 * { box-sizing: border-box; }
+
+::-webkit-scrollbar { width: 3px; }
+
+::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); }
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
 
 body {
     margin: 0;
@@ -17,9 +27,17 @@ body {
 header {
     padding: 1rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     background-color: var(--secondary-color);
 }
+
+header h1 { margin: 0; }
+
+header h1 a { 
+    color: var(--primary-color);
+    font-family: 'Rowdies', cursive;
+    text-decoration: none;
+ }
 
 .search {
     padding: 0.5rem 1rem;
@@ -36,6 +54,28 @@ header {
 .search:focus {
     outline: none;
     background-color: var(--primary-color);
+}
+
+header nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav .nav-link {
+    padding: 0.25rem 0.75rem;
+    border-radius: 10px;
+    margin-right: 10px;
+    background-color: var(--primary-color);
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    transition: all 0.2s linear;
+}
+
+nav .nav-link:hover {
+    background-color: #fff;
+    color: var(--primary-color);
 }
 
 main {
@@ -56,7 +96,7 @@ main {
 .movie img { width: 100%; }
 
 .movie-info {
-    padding: 0.5rem 1 rem 1rem;
+    padding: 0.5rem 1rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -64,17 +104,23 @@ main {
     letter-spacing: 0.5px;
 }
 
-.movie-info h3 { margin-top: 0; }
+.movie-info h3 { 
+    margin: 0; 
+    font-family: 'Rowdies', cursive;
+}
+
+.overview h3 { font-family: 'Rowdies', cursive; }
 
 .movie-info span {
-    padding: 0.25rem 0 0.5rem;
+    padding: 0.25rem 0.5rem 0.5rem;
     border-radius: 3px;
+    margin-left: 10px;
     background-color: var(--primary-color);
     font-weight: bold;
 }
 
 .movie-info span.green { color: lightgreen; }
-.movie-info span.orange { color: orange; }
+.movie-info span.aqua { color: aqua; }
 .movie-info span.red { color: red; }
 
 .overview {
@@ -85,6 +131,7 @@ main {
     bottom: 0;
     right: 0;
     background-color: #fff;
+    overflow-y: auto;
     transform: translateY(101%);
     transition: transform 0.3s ease-in;
 }
