--- a/movies-app/style.css
+++ b/movies-app/style.css
@@ -63,7 +63,7 @@ header nav {
 }
 
 nav .nav-link {
-    padding: 0.25rem 0.75rem;
+    padding: 0.45rem 1rem;
     border-radius: 10px;
     margin-right: 10px;
     background-color: var(--primary-color);
@@ -148,3 +148,29 @@ main {
 }
 
 .overview p { font-size: 15px; }
+
+/* Mobile Responsive Styling */
+
+@media screen and (max-width: 995px) {
+    header { display: block;}
+    header h1 { margin-bottom: 10px; }
+    header nav { justify-content: space-between; }
+    .movie { width: 40%;}
+
+    .movie-info {
+        display: block;
+        text-align: center;
+    }
+
+    .movie-info h3 { margin-bottom: 10px; }
+}
+
+
+@media screen and (max-width: 480px) {
+    form .search { max-width: 200px; }
+
+    .movie { 
+        width: 100%; 
+        max-width: auto;
+    }
+}
