weather-forecast app code optimised

--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -10,7 +10,7 @@ li {list-style-type: none; }
 h2 {
   padding: 20px 0;
   color: #3d4c9e;
-  font-family: sans-serif;
+  font-family: 'Open Sans',sans-serif;
   font-size: 32px;
   font-weight: 700;
 }
