--- a/light-dark-mode/style.css
+++ b/light-dark-mode/style.css
@@ -49,8 +49,8 @@ font-family: 'Oswald', sans-serif;
   ::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); }
 
   ::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
+    background-color: var(--primary-color);
+    outline: 1px solid var(--secondary-color);
   }
   
   section {
