--- a/infinite-scroll/style.css
+++ b/infinite-scroll/style.css
@@ -6,26 +6,20 @@ CSS rules to specify families
 font-family: 'Bebas Neue', sans-serif;
 */
 
-* {
-    box-sizing: border-box;
-}
-
-html {
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
     margin: 0;
-    font-family: 'Bebas Neue', sans-serif;
     background-color: #f5f5f5;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 h1 {
-    text-align: center;
     margin-top: 25px;
     margin-bottom: 15px;
     font-size: 40px;
     letter-spacing: 5px;
+    text-align: center;
 }
 
 /* Loader */
@@ -46,9 +40,7 @@ h1 {
 }
 
 /* Image Container */
-.image-container {
-    margin: 10px 30%;
-}
+.image-container { margin: 10px 30%; }
 
 .image-container img {
     width: 100%;
@@ -58,8 +50,5 @@ h1 {
 /* Media Query for Large Smartphone */
 @media screen and (max-width: 767px) {
     h1 { font-size: 20px; }
-
-    .image-container {
-        margin: 10px;
-    }
+    .image-container { margin: 10px; }
 }
