--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,19 +1,15 @@
-/*Importing Google Font*/
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
     margin: 0;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f5f5f5;
-    /* background: linear-gradient(to right, #2C5364, #203A43, #0F2027); */
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
 }
 
 /* Custom Scrollbar */
@@ -42,9 +38,8 @@ body {
 .calculator-display h1 {
     margin: 0;
     padding: 25px;
-    font-size: 45px;
-    font-family: 'Lucida Console', sans-serif;
-    font-weight: 100;
+    font-size: 40px;
+    font-weight: 400;
     overflow-x: auto;
 }
 
@@ -56,11 +51,68 @@ body {
     padding: 10px;
 }
 
-.calculator-buttons button {
+button {
+    min-height: 50px;
+    font-size: 20px;
+    font-weight: 100;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
+    background-color: #c7c7c7;
+}
+
+button:hover {
+    filter: brightness(90%);
+}
+
+button:active {
+    transform: translateY(1px);
+}
+
+button:focus {
+    outline: none;
+}
+
+.operator {
+    background: #808080;
+    color: #fff;
+    font-size: 50px;
+}
+
+.clear {
+    background-color: #ff2828;
+    color: #fff;
 }
 
 .equal-sign {
     grid-column: -2;
     grid-row: 2 / span 4;
+    background: rgb(13,206,87);
+}
+
+/* Media Query */
+
+@media screen and (max-width:480px) {
+    .calculator {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .calculator-display h1 {
+        font-size: 22px;
+    }
+
+    .calculator-buttons {
+        grid-gap: 5px;
+        padding: 5px;
+    }
+
+    button {
+        min-height: 40px;
+        font-size: 16px;
+    }
+
+    .operator {
+        font-size: 30px;
+    }
 }
