--- a/calculator/style.css
+++ b/calculator/style.css
@@ -20,10 +20,9 @@ body {
     padding: 10px;
     margin-bottom: 10px;
     display: inline-block;
-    background: #000;
-    color: #fff;
+    color: #ffc800;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 18px;
     text-decoration: none;
 }
 
