--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -1,4 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Chela+One&family=Righteous&family=Rowdies&display=swap');
+/*
+CSS rules to specify families
+font-family: 'Chela One', cursive;
+font-family: 'Righteous', cursive;
+font-family: 'Rowdies', cursive;
+*/
+
+* { box-sizing: border-box; }
 body { background-color: #669acc; }
+
+/* Theme Colors */
+body.dark { background-color: #000; }
+body.dark .weatherdetails { background-color: rgba(90, 90, 90, 0.4); }
+body.dark .weather-info .weather-description { border-color: #fff; }
+body.dark .weather-forecast h2 { color: #fff; }
+body.dark .inputdetails button[type="submit"] { 
+  background-color: #4b51ff;
+  color: #fff;
+}
+body.dark p,
+body.dark span { color: #fff; }
+body.dark .location { color: #4b51ff; }
+
+body.light { background-color: #669acc; }
+body.light .weatherdetails { background-color: rgba(255,255,255,0.5); }
+body.light .weather-info .weather-description { border-color: #000; }
+body.light .weather-forecast h2 { color: #000; }
+body.light .inputdetails button[type="submit"] { 
+  background-color: #3d4c9e;
+  color: #fff;
+}
+body.light p,
+body.light span { color: #000; }
+body.light .location { color: #3d4c9e; }
 
 .wrapper {
   max-width: 1400px;
@@ -10,10 +44,13 @@ li {list-style-type: none; }
 h2 {
   padding: 20px 0;
   color: #3d4c9e;
-  font-family: 'Open Sans',sans-serif;
-  font-size: 32px;
+  font-family: 'Chela One',sans-serif;
+  font-size: 42px;
   font-weight: 700;
 }
+
+p { font-family: 'Rowdies', sans-serif; }
+span { font-family: 'Righteous', sans-serif; }
 
 .inputdetails {
   padding: 100px 0 20px;
@@ -24,14 +61,14 @@ h2 {
   padding: 5px 10px;
   border:none;
   outline:none;
+  font-size: 30px;
 }
 
 .inputdetails button[type="submit"] {
   padding: 5px 10px;
   border: none;
   outline:none;
-  background-color: #3d4c9e;
-  color: #fff;
+  font-size: 30px;
   font-weight: 700;
   -webkit-transition: 0.3 linear all;
   -o-transition: 0.3 linear all;
@@ -39,18 +76,18 @@ h2 {
 }
 
 .inputdetails button[type="submit"]:hover { background-color: #5d6fd4; }
-
 .weather-desc { text-transform: capitalize; }
 
 .weatherdetails {
-  width: 540px;
-  box-sizing: border-box;
+  width: 80%;
+  min-width: 540px;
   padding: 20px;
+  border-radius: 25px;
+  margin: 0 auto;
   margin-bottom: 50px;
-  display: inline-block;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: rgba(255,255,255,0.5);
 }
 
@@ -62,13 +99,41 @@ h2 {
 }
 
 .weather-info { 
-  margin-bottom: 50px; 
   text-align: center;
+  flex-basis: 30%;
 }
 
 .weather-info .weather-description { text-transform: capitalize; }
 
-.weather-forecast h2 { text-align: center; }
+.weather-info .location {
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.weather-info .temperature {
+  margin: 20px 0 10px;
+  font-size: 80px;
+  font-weight: 700;
+}
+
+.weather-info .weather-description {
+  width: fit-content;
+  padding: 10px;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 10px;
+  margin: 0 auto;
+  font-size: 20px;
+}
+
+.weather-info .desc { font-size: 18px; }
+.weather-forecast { flex-basis: 60%; }
+
+.weather-forecast h2 { 
+  font-size: 50px;
+  text-align: center; 
+}
 
 .weather-forecast span { 
   line-height: 1.4;
@@ -97,6 +162,7 @@ h2 {
 .forecast-ul li .forecast-date {
   -ms-flex-preferred-size: 35%;
   flex-basis: 35%;
+  font-size: 25px;
 }
 
 .forecast-ul li .forecast-date span { line-height: 1.8; }
@@ -106,46 +172,10 @@ h2 {
   flex-basis: 25%;
 }
 
+.forecast-ul li .forecast-icon img { min-width: 150px; }
+
 .forecast-ul li .forecast-temp {
   -ms-flex-preferred-size: 40%;
   flex-basis: 40%;
-}
-
-.forecast-temp span {
-  display: inline;
-}
-
-@media screen and (max-width: 995px) {
-  .inputdetails button[type="submit"]:hover {
-    background-color: #3d4c9e;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .inputdetails { padding-top: 20px; }
-}
-
-@media screen and (max-width: 540px) {
-  .weatherdetails { 
-    width: 90%; 
-    margin-bottom: 100px;
-  }
-
-  .forecast-ul li .forecast-date { margin-bottom: 10px; }
-
-  .inputdetails input[type="search"],
-  .inputdetails button[type="submit"] {
-    box-sizing: border-box;
-    width: 90%;
-    display: block;
-    margin: 0 auto;
-    text-align: center  ;
-  }
-  
-  h2 { font-size: 24px; }
-
-  .forecast-ul li { 
-    margin-bottom: 50px;
-    display: block; 
-  }
+  font-size: 50px;
 }
