--- a/weather-forecast/assets/css/style.css
+++ b/weather-forecast/assets/css/style.css
@@ -205,17 +205,13 @@ span { font-family: 'Righteous', sans-serif; }
 
 @media screen and (max-width: 600px) {
   .weatherdetails { 
-    width: 90%;
+    width: 95%;
     min-width: auto;
     margin-bottom: 100px;
   }
 
   .forecast-ul li .forecast-date { margin-bottom: 10px; }
-
-  .inputdetails {
-    width: 80%;
-    margin: 100px auto 20px;
-  }
+  .inputdetails { width: 80%;}
 
   .inputdetails input[type="search"] {
     border-radius: 15px;
@@ -231,6 +227,8 @@ span { font-family: 'Righteous', sans-serif; }
     margin-bottom: 80px;
     display: block; 
   }
+
+  .wptsimg img { width: 100%; }
 }
 
 @media screen and (max-width: 480px) {
@@ -238,5 +236,5 @@ span { font-family: 'Righteous', sans-serif; }
   .weather-info .temperature { font-size: 60px; }
   .weather-info .weather-description { font-size: 18px; }
   .weather-info .desc { font-size: 16px; }
-  .weather-forecast h2 { font-size: 30px; }
+  .weather-forecast h2 { font-size: 35px; }
 }
